k8s/uptime-kuma/route.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma-route
  namespace: uptime-kuma
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: default
      sectionName: uptime-kuma-https
  hostnames:
    - uptime.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - group: ''
        kind: Service
        name: uptime-kuma
        port: 3001
        weight: 1
